--- a/git_wild.Rmd
+++ b/git_wild.Rmd
@@ -35,8 +35,9 @@ ggplot(data = diamonds, aes(x = color, y = carat)) +
 ## PART B: Make problems
 
 ```{r break-it-1}
+## random
 ggplot(data = diamonds, aes(x = depth, y = carat)) +
-  geom_point() +
+  geom_line() +
   theme_void()
 ```
 
