--- a/git_wild.Rmd
+++ b/git_wild.Rmd
@@ -35,9 +35,11 @@ ggplot(data = diamonds, aes(x = color, y = carat)) +
 ## PART B: Make problems
 
 ```{r break-it-1}
-ggplot(data = diamonds, aes(x = depth, y = carat)) +
-  geom_point() +
-  theme_void()
+ggplot(data = diamonds, aes(x = color, y = carat)) +
+  geom_point()
+
+Anna broke something 
+
 ```
 
 ```{r break-it-2}
