--- a/git_wild.Rmd
+++ b/git_wild.Rmd
@@ -38,7 +38,7 @@ ggplot(data = diamonds, aes(x = color, y = carat)) +
 ggplot(data = diamonds, aes(x = color, y = carat)) +
   geom_point()
 
-Anna broke something 
+#Anna broke something 
 
 ```
 
